# chat-bot-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.extend.json  tsconfig.json  turbo.json
src/apis/llm-service/: app.py  container.py  package.json  pyproject.toml  requirements.txt  serverless.yml
src/apis/llm-service/common/domain/: id.py
src/apis/llm-service/core/: pydantic.py
src/apis/llm-service/core/llms/: history_formatter.py  llm.py
src/apis/llm-service/core/llms/fake_llm/: fake_llm.py
src/apis/llm-service/core/llms/langchain/: gpt.py
src/apis/llm-service/core/llms/langchain/chat_prompts/: answer_message_prompt.py  prompt_factory.py
src/apis/llm-service/core/llms/langchain/config/: __init__.py
src/apis/llm-service/core/llms/langchain/default_messages/: regueatton_first_message.py  vocabulary_first_message.py
src/apis/llm-service/core/llms/langchain/history/: buffer_memory_history_formatter.py  (+3 more)
src/apis/llm-service/modules/conversations/application/: __init__.py
src/apis/llm-service/modules/message/domain/: value_objects.py
src/apis/llm-service/modules/message/infrastructure/: dtos.py
src/apis/llm-service/modules/messages/application/: __init__.py
src/apis/llm-service/modules/messages/domain/: value_objects.py
src/apis/llm-service/modules/users/domain/: value_objects.py
src/apis/llm-service/notebooks/: agent-flow-test.ipynb  asset-generation-dalle.ipynb
src/apis/llm-service/tests/test_curl_calls/: message.md
src/apis/llm-service/tests/test_deploy/: test_object.json
(+436 files in other folders)
