[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
authors = ["Pablo Torres <pablo.torres@check24.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
dependency-injector = "^4.41.0"
mangum = "^0.17.0"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
pydantic = "^2.6.4"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
