[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
authors = ["Pablo Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
dependency-injector = "^4.41.0"
mangum = "^0.17.0"
langchain = "^0.2.1"
langchain-openai = "^0.1.23"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pydantic-core = "^2.18.2"
langgraph = "^0.2.14"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
